# http-gateway

./: Cargo.toml  LICENSE  README.md
http-file-explorer/: Cargo.toml
http-file-explorer/src/: main.rs
http-gateway/: Cargo.toml
http-gateway/src/: handler.rs  lib.rs  main.rs  router.rs  tokio_hyper.rs  uri_subject.rs
http-gateway/src/router/: auth.rs  ext.rs
http-todos/: .env  Cargo.toml
http-todos/src/: main.rs
