[package]
name = "http-gateway"
version = "0.1.1"
edition = "2024"
description = "A small, tree-structured router for building REST APIs."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Andrepuel/http-gateway"
keywords = ["http", "router", "rest", "api", "async"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
ascii = "1.1.0"
bytes = "1.11.1"
dotenvy = "0.15.7"
either = "1.15.0"
futures = "0.3.32"
hyper = { version = "1.8.1", features = ["http1", "server"] }
pin-project = "1.1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.51", features = ["net", "rt", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v7"] }
